generated/y.output
Terminals unused in grammar

   PLUSLESS
   DOUBLE_QUOTE
   SINGLE_QUOTE
   OP_DEC_PRE
   OP_INC_PRE
   OP_DEC_POS
   OP_INC_POS
   OP_INDEX


State 155 conflicts: 1 shift/reduce


Grammar

    0 $accept: Principal $end

    1 Principal: header_program block

    2 block: start_block local_var_dec sub_progs sentences end_block
    3      | start_block local_var_dec sub_progs end_block

    4 sub_progs: sub_progs sub_prog
    5          | %empty

    6 sub_prog: header_subprogram block

    7 local_var_dec: VARINI local_var VARFIN
    8              | %empty

    9 header_program: INICIO_PROGRAMA
   10               | error

   11 start_block: LEFT_CURLY

   12 end_block: RIGHT_CURLY

   13 local_var: local_var var_body
   14          | var_body

   15 var_body: type array_or_id SEMICOLON
   16         | type array_or_id error
   17         | error

   18 type: primitive_type
   19     | error

   20 primitive_type: TYPE

   21 array_or_id: IDENTIFIER LEFT_SQUARE_BRACKET expr COMMA expr RIGHT_SQUARE_BRACKET
   22            | IDENTIFIER LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   23            | array_or_id COMMA IDENTIFIER
   24            | IDENTIFIER

   25 header_subprogram: type IDENTIFIER LEFT_BRACKET parameters RIGHT_BRACKET
   26                  | type IDENTIFIER LEFT_BRACKET RIGHT_BRACKET

   27 parameters: parameters COMMA type IDENTIFIER
   28           | type IDENTIFIER

   29 sentences: sentences sentence
   30          | sentence

   31 sentence: block
   32         | sentence_assign
   33         | sentence_if_then_else
   34         | sentence_while
   35         | sentence_input
   36         | sentence_output
   37         | sentence_return
   38         | sentence_switch

   39 sentence_assign: IDENTIFIER EQUAL expr SEMICOLON

   40 sentence_if_then_else: IF LEFT_BRACKET expr RIGHT_BRACKET sentence
   41                      | IF LEFT_BRACKET expr RIGHT_BRACKET sentence ELSE sentence

   42 sentence_while: WHILE LEFT_BRACKET expr RIGHT_BRACKET sentence

   43 sentence_switch: SELECT LEFT_BRACKET expr RIGHT_BRACKET start_block switch_cases end_block

   44 switch_cases: CASE expr COLON switch_block switch_cases
   45             | CASE expr COLON switch_block

   46 switch_block: local_var_dec sub_progs sentences BREAK SEMICOLON

   47 sentence_input: ENTER STRING COMMA array_or_id
   48               | ENTER array_or_id

   49 sentence_output: EXIT list_expr_string SEMICOLON

   50 list_expr_string: list_expr_string COMMA expr_cad
   51                 | expr_cad

   52 array: IDENTIFIER LEFT_SQUARE_BRACKET expr COMMA expr RIGHT_SQUARE_BRACKET
   53      | IDENTIFIER LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET

   54 expr_cad: expr STRING

   55 expr: LEFT_BRACKET expr RIGHT_BRACKET
   56     | OP_PLUSLESS expr
   57     | UNARY_OPERATOR expr
   58     | expr OP_PLUSLESS expr
   59     | expr OP_MUL expr
   60     | expr OP_REL expr
   61     | expr OP_NEQ_EQ expr
   62     | expr OP_OR expr
   63     | expr OP_AND expr
   64     | expr OP_XOR expr
   65     | IDENTIFIER
   66     | array
   67     | const
   68     | function_call
   69     | error

   70 sentence_return: RETURN expr SEMICOLON

   71 function_call: IDENTIFIER LEFT_BRACKET list_expr RIGHT_BRACKET
   72              | IDENTIFIER LEFT_BRACKET RIGHT_BRACKET

   73 list_expr: list_expr COMMA expr
   74          | expr

   75 const: INT
   76      | FLOAT
   77      | BOOL
   78      | CHAR
   79      | array_constant

   80 array_constant: LEFT_SQUARE_BRACKET list_int_const RIGHT_SQUARE_BRACKET
   81               | LEFT_SQUARE_BRACKET list_int_const SEMICOLON list_int_const RIGHT_SQUARE_BRACKET
   82               | LEFT_SQUARE_BRACKET list_float_const RIGHT_SQUARE_BRACKET
   83               | LEFT_SQUARE_BRACKET list_float_const SEMICOLON list_float_const RIGHT_SQUARE_BRACKET
   84               | LEFT_SQUARE_BRACKET list_boolean_const RIGHT_SQUARE_BRACKET
   85               | LEFT_SQUARE_BRACKET list_boolean_const SEMICOLON list_boolean_const RIGHT_SQUARE_BRACKET
   86               | LEFT_SQUARE_BRACKET list_char_const RIGHT_SQUARE_BRACKET
   87               | LEFT_SQUARE_BRACKET list_char_const SEMICOLON list_char_const RIGHT_SQUARE_BRACKET
   88               | LEFT_SQUARE_BRACKET list_string_const RIGHT_SQUARE_BRACKET
   89               | LEFT_SQUARE_BRACKET list_string_const SEMICOLON list_string_const RIGHT_SQUARE_BRACKET
   90               | LEFT_SQUARE_BRACKET list_array_const RIGHT_SQUARE_BRACKET
   91               | LEFT_SQUARE_BRACKET list_array_const SEMICOLON list_array_const RIGHT_SQUARE_BRACKET

   92 list_int_const: list_int_const COMMA INT
   93               | INT

   94 list_float_const: list_float_const COMMA FLOAT
   95                 | FLOAT

   96 list_boolean_const: list_boolean_const COMMA BOOL
   97                   | BOOL

   98 list_char_const: list_char_const COMMA CHAR
   99                | CHAR

  100 list_string_const: list_string_const COMMA STRING
  101                  | STRING

  102 list_array_const: list_array_const COMMA array_constant
  103                 | array_constant


Terminals, with rules where they appear

$end (0) 0
error (256) 10 16 17 19 69
INICIO_PROGRAMA (258) 9
VARINI (259) 7
VARFIN (260) 7
LEFT_CURLY (261) 11
RIGHT_CURLY (262) 12
TYPE (263) 20
COMMA (264) 21 23 27 47 50 52 73 92 94 96 98 100 102
LEFT_BRACKET (265) 25 26 40 41 42 43 55 71 72
RIGHT_BRACKET (266) 25 26 40 41 42 43 55 71 72
EQUAL (267) 39
SEMICOLON (268) 15 39 46 49 70 81 83 85 87 89 91
IF (269) 40 41
ELSE (270) 41
WHILE (271) 42
SELECT (272) 43
CASE (273) 44 45
ENTER (274) 47 48
EXIT (275) 49
RETURN (276) 70
PLUSLESS (277)
BOOL (278) 77 96 97
LEFT_SQUARE_BRACKET (279) 21 22 52 53 80 81 82 83 84 85 86 87 88 89
    90 91
RIGHT_SQUARE_BRACKET (280) 21 22 52 53 80 81 82 83 84 85 86 87 88 89
    90 91
DOUBLE_QUOTE (281)
SINGLE_QUOTE (282)
OP_OR (283) 62
OP_AND (284) 63
OP_XOR (285) 64
OP_NEQ_EQ (286) 61
OP_REL (287) 60
OP_PLUSLESS (288) 56 58
OP_MUL (289) 59
OP_DEC_PRE (290)
OP_INC_PRE (291)
OP_DEC_POS (292)
OP_INC_POS (293)
OP_INDEX (294)
UNARY_OPERATOR (295) 57
INT (296) 75 92 93
FLOAT (297) 76 94 95
CHAR (298) 78 98 99
STRING (299) 47 54 100 101
IDENTIFIER (300) 21 22 23 24 25 26 27 28 39 52 53 65 71 72
BREAK (301) 46
COLON (302) 44 45


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
Principal (49)
    on left: 1, on right: 0
block (50)
    on left: 2 3, on right: 1 6 31
sub_progs (51)
    on left: 4 5, on right: 2 3 4 46
sub_prog (52)
    on left: 6, on right: 4
local_var_dec (53)
    on left: 7 8, on right: 2 3 46
header_program (54)
    on left: 9 10, on right: 1
start_block (55)
    on left: 11, on right: 2 3 43
end_block (56)
    on left: 12, on right: 2 3 43
local_var (57)
    on left: 13 14, on right: 7 13
var_body (58)
    on left: 15 16 17, on right: 13 14
type (59)
    on left: 18 19, on right: 15 16 25 26 27 28
primitive_type (60)
    on left: 20, on right: 18
array_or_id (61)
    on left: 21 22 23 24, on right: 15 16 23 47 48
header_subprogram (62)
    on left: 25 26, on right: 6
parameters (63)
    on left: 27 28, on right: 25 27
sentences (64)
    on left: 29 30, on right: 2 29 46
sentence (65)
    on left: 31 32 33 34 35 36 37 38, on right: 29 30 40 41 42
sentence_assign (66)
    on left: 39, on right: 32
sentence_if_then_else (67)
    on left: 40 41, on right: 33
sentence_while (68)
    on left: 42, on right: 34
sentence_switch (69)
    on left: 43, on right: 38
switch_cases (70)
    on left: 44 45, on right: 43 44
switch_block (71)
    on left: 46, on right: 44 45
sentence_input (72)
    on left: 47 48, on right: 35
sentence_output (73)
    on left: 49, on right: 36
list_expr_string (74)
    on left: 50 51, on right: 49 50
array (75)
    on left: 52 53, on right: 66
expr_cad (76)
    on left: 54, on right: 50 51
expr (77)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69, on right:
    21 22 39 40 41 42 43 44 45 52 53 54 55 56 57 58 59 60 61 62 63
    64 70 73 74
sentence_return (78)
    on left: 70, on right: 37
function_call (79)
    on left: 71 72, on right: 68
list_expr (80)
    on left: 73 74, on right: 71 73
const (81)
    on left: 75 76 77 78 79, on right: 67
array_constant (82)
    on left: 80 81 82 83 84 85 86 87 88 89 90 91, on right: 79 102
    103
list_int_const (83)
    on left: 92 93, on right: 80 81 92
list_float_const (84)
    on left: 94 95, on right: 82 83 94
list_boolean_const (85)
    on left: 96 97, on right: 84 85 96
list_char_const (86)
    on left: 98 99, on right: 86 87 98
list_string_const (87)
    on left: 100 101, on right: 88 89 100
list_array_const (88)
    on left: 102 103, on right: 90 91 102


State 0

    0 $accept: . Principal $end

    error            shift, and go to state 1
    INICIO_PROGRAMA  shift, and go to state 2

    Principal       go to state 3
    header_program  go to state 4


State 1

   10 header_program: error .

    $default  reduce using rule 10 (header_program)


State 2

    9 header_program: INICIO_PROGRAMA .

    $default  reduce using rule 9 (header_program)


State 3

    0 $accept: Principal . $end

    $end  shift, and go to state 5


State 4

    1 Principal: header_program . block

    LEFT_CURLY  shift, and go to state 6

    block        go to state 7
    start_block  go to state 8


State 5

    0 $accept: Principal $end .

    $default  accept


State 6

   11 start_block: LEFT_CURLY .

    $default  reduce using rule 11 (start_block)


State 7

    1 Principal: header_program block .

    $default  reduce using rule 1 (Principal)


State 8

    2 block: start_block . local_var_dec sub_progs sentences end_block
    3      | start_block . local_var_dec sub_progs end_block

    VARINI  shift, and go to state 9

    $default  reduce using rule 8 (local_var_dec)

    local_var_dec  go to state 10


State 9

    7 local_var_dec: VARINI . local_var VARFIN

    error  shift, and go to state 11
    TYPE   shift, and go to state 12

    local_var       go to state 13
    var_body        go to state 14
    type            go to state 15
    primitive_type  go to state 16


State 10

    2 block: start_block local_var_dec . sub_progs sentences end_block
    3      | start_block local_var_dec . sub_progs end_block

    $default  reduce using rule 5 (sub_progs)

    sub_progs  go to state 17


State 11

   17 var_body: error .
   19 type: error .

    IDENTIFIER  reduce using rule 19 (type)
    $default    reduce using rule 17 (var_body)


State 12

   20 primitive_type: TYPE .

    $default  reduce using rule 20 (primitive_type)


State 13

    7 local_var_dec: VARINI local_var . VARFIN
   13 local_var: local_var . var_body

    error   shift, and go to state 11
    VARFIN  shift, and go to state 18
    TYPE    shift, and go to state 12

    var_body        go to state 19
    type            go to state 15
    primitive_type  go to state 16


State 14

   14 local_var: var_body .

    $default  reduce using rule 14 (local_var)


State 15

   15 var_body: type . array_or_id SEMICOLON
   16         | type . array_or_id error

    IDENTIFIER  shift, and go to state 20

    array_or_id  go to state 21


State 16

   18 type: primitive_type .

    $default  reduce using rule 18 (type)


State 17

    2 block: start_block local_var_dec sub_progs . sentences end_block
    3      | start_block local_var_dec sub_progs . end_block
    4 sub_progs: sub_progs . sub_prog

    error        shift, and go to state 22
    LEFT_CURLY   shift, and go to state 6
    RIGHT_CURLY  shift, and go to state 23
    TYPE         shift, and go to state 12
    IF           shift, and go to state 24
    WHILE        shift, and go to state 25
    SELECT       shift, and go to state 26
    ENTER        shift, and go to state 27
    EXIT         shift, and go to state 28
    RETURN       shift, and go to state 29
    IDENTIFIER   shift, and go to state 30

    block                  go to state 31
    sub_prog               go to state 32
    start_block            go to state 8
    end_block              go to state 33
    type                   go to state 34
    primitive_type         go to state 16
    header_subprogram      go to state 35
    sentences              go to state 36
    sentence               go to state 37
    sentence_assign        go to state 38
    sentence_if_then_else  go to state 39
    sentence_while         go to state 40
    sentence_switch        go to state 41
    sentence_input         go to state 42
    sentence_output        go to state 43
    sentence_return        go to state 44


State 18

    7 local_var_dec: VARINI local_var VARFIN .

    $default  reduce using rule 7 (local_var_dec)


State 19

   13 local_var: local_var var_body .

    $default  reduce using rule 13 (local_var)


State 20

   21 array_or_id: IDENTIFIER . LEFT_SQUARE_BRACKET expr COMMA expr RIGHT_SQUARE_BRACKET
   22            | IDENTIFIER . LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   24            | IDENTIFIER .

    LEFT_SQUARE_BRACKET  shift, and go to state 45

    $default  reduce using rule 24 (array_or_id)


State 21

   15 var_body: type array_or_id . SEMICOLON
   16         | type array_or_id . error
   23 array_or_id: array_or_id . COMMA IDENTIFIER

    error      shift, and go to state 46
    COMMA      shift, and go to state 47
    SEMICOLON  shift, and go to state 48


State 22

   19 type: error .

    $default  reduce using rule 19 (type)


State 23

   12 end_block: RIGHT_CURLY .

    $default  reduce using rule 12 (end_block)


State 24

   40 sentence_if_then_else: IF . LEFT_BRACKET expr RIGHT_BRACKET sentence
   41                      | IF . LEFT_BRACKET expr RIGHT_BRACKET sentence ELSE sentence

    LEFT_BRACKET  shift, and go to state 49


State 25

   42 sentence_while: WHILE . LEFT_BRACKET expr RIGHT_BRACKET sentence

    LEFT_BRACKET  shift, and go to state 50


State 26

   43 sentence_switch: SELECT . LEFT_BRACKET expr RIGHT_BRACKET start_block switch_cases end_block

    LEFT_BRACKET  shift, and go to state 51


State 27

   47 sentence_input: ENTER . STRING COMMA array_or_id
   48               | ENTER . array_or_id

    STRING      shift, and go to state 52
    IDENTIFIER  shift, and go to state 20

    array_or_id  go to state 53


State 28

   49 sentence_output: EXIT . list_expr_string SEMICOLON

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    list_expr_string  go to state 64
    array             go to state 65
    expr_cad          go to state 66
    expr              go to state 67
    function_call     go to state 68
    const             go to state 69
    array_constant    go to state 70


State 29

   70 sentence_return: RETURN . expr SEMICOLON

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    array           go to state 65
    expr            go to state 71
    function_call   go to state 68
    const           go to state 69
    array_constant  go to state 70


State 30

   39 sentence_assign: IDENTIFIER . EQUAL expr SEMICOLON

    EQUAL  shift, and go to state 72


State 31

   31 sentence: block .

    $default  reduce using rule 31 (sentence)


State 32

    4 sub_progs: sub_progs sub_prog .

    $default  reduce using rule 4 (sub_progs)


State 33

    3 block: start_block local_var_dec sub_progs end_block .

    $default  reduce using rule 3 (block)


State 34

   25 header_subprogram: type . IDENTIFIER LEFT_BRACKET parameters RIGHT_BRACKET
   26                  | type . IDENTIFIER LEFT_BRACKET RIGHT_BRACKET

    IDENTIFIER  shift, and go to state 73


State 35

    6 sub_prog: header_subprogram . block

    LEFT_CURLY  shift, and go to state 6

    block        go to state 74
    start_block  go to state 8


State 36

    2 block: start_block local_var_dec sub_progs sentences . end_block
   29 sentences: sentences . sentence

    LEFT_CURLY   shift, and go to state 6
    RIGHT_CURLY  shift, and go to state 23
    IF           shift, and go to state 24
    WHILE        shift, and go to state 25
    SELECT       shift, and go to state 26
    ENTER        shift, and go to state 27
    EXIT         shift, and go to state 28
    RETURN       shift, and go to state 29
    IDENTIFIER   shift, and go to state 30

    block                  go to state 31
    start_block            go to state 8
    end_block              go to state 75
    sentence               go to state 76
    sentence_assign        go to state 38
    sentence_if_then_else  go to state 39
    sentence_while         go to state 40
    sentence_switch        go to state 41
    sentence_input         go to state 42
    sentence_output        go to state 43
    sentence_return        go to state 44


State 37

   30 sentences: sentence .

    $default  reduce using rule 30 (sentences)


State 38

   32 sentence: sentence_assign .

    $default  reduce using rule 32 (sentence)


State 39

   33 sentence: sentence_if_then_else .

    $default  reduce using rule 33 (sentence)


State 40

   34 sentence: sentence_while .

    $default  reduce using rule 34 (sentence)


State 41

   38 sentence: sentence_switch .

    $default  reduce using rule 38 (sentence)


State 42

   35 sentence: sentence_input .

    $default  reduce using rule 35 (sentence)


State 43

   36 sentence: sentence_output .

    $default  reduce using rule 36 (sentence)


State 44

   37 sentence: sentence_return .

    $default  reduce using rule 37 (sentence)


State 45

   21 array_or_id: IDENTIFIER LEFT_SQUARE_BRACKET . expr COMMA expr RIGHT_SQUARE_BRACKET
   22            | IDENTIFIER LEFT_SQUARE_BRACKET . expr RIGHT_SQUARE_BRACKET

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    array           go to state 65
    expr            go to state 77
    function_call   go to state 68
    const           go to state 69
    array_constant  go to state 70


State 46

   16 var_body: type array_or_id error .

    $default  reduce using rule 16 (var_body)


State 47

   23 array_or_id: array_or_id COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 78


State 48

   15 var_body: type array_or_id SEMICOLON .

    $default  reduce using rule 15 (var_body)


State 49

   40 sentence_if_then_else: IF LEFT_BRACKET . expr RIGHT_BRACKET sentence
   41                      | IF LEFT_BRACKET . expr RIGHT_BRACKET sentence ELSE sentence

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    array           go to state 65
    expr            go to state 79
    function_call   go to state 68
    const           go to state 69
    array_constant  go to state 70


State 50

   42 sentence_while: WHILE LEFT_BRACKET . expr RIGHT_BRACKET sentence

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    array           go to state 65
    expr            go to state 80
    function_call   go to state 68
    const           go to state 69
    array_constant  go to state 70


State 51

   43 sentence_switch: SELECT LEFT_BRACKET . expr RIGHT_BRACKET start_block switch_cases end_block

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    array           go to state 65
    expr            go to state 81
    function_call   go to state 68
    const           go to state 69
    array_constant  go to state 70


State 52

   47 sentence_input: ENTER STRING . COMMA array_or_id

    COMMA  shift, and go to state 82


State 53

   23 array_or_id: array_or_id . COMMA IDENTIFIER
   48 sentence_input: ENTER array_or_id .

    COMMA  shift, and go to state 47

    $default  reduce using rule 48 (sentence_input)


State 54

   69 expr: error .

    $default  reduce using rule 69 (expr)


State 55

   55 expr: LEFT_BRACKET . expr RIGHT_BRACKET

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    array           go to state 65
    expr            go to state 83
    function_call   go to state 68
    const           go to state 69
    array_constant  go to state 70


State 56

   77 const: BOOL .

    $default  reduce using rule 77 (const)


State 57

   80 array_constant: LEFT_SQUARE_BRACKET . list_int_const RIGHT_SQUARE_BRACKET
   81               | LEFT_SQUARE_BRACKET . list_int_const SEMICOLON list_int_const RIGHT_SQUARE_BRACKET
   82               | LEFT_SQUARE_BRACKET . list_float_const RIGHT_SQUARE_BRACKET
   83               | LEFT_SQUARE_BRACKET . list_float_const SEMICOLON list_float_const RIGHT_SQUARE_BRACKET
   84               | LEFT_SQUARE_BRACKET . list_boolean_const RIGHT_SQUARE_BRACKET
   85               | LEFT_SQUARE_BRACKET . list_boolean_const SEMICOLON list_boolean_const RIGHT_SQUARE_BRACKET
   86               | LEFT_SQUARE_BRACKET . list_char_const RIGHT_SQUARE_BRACKET
   87               | LEFT_SQUARE_BRACKET . list_char_const SEMICOLON list_char_const RIGHT_SQUARE_BRACKET
   88               | LEFT_SQUARE_BRACKET . list_string_const RIGHT_SQUARE_BRACKET
   89               | LEFT_SQUARE_BRACKET . list_string_const SEMICOLON list_string_const RIGHT_SQUARE_BRACKET
   90               | LEFT_SQUARE_BRACKET . list_array_const RIGHT_SQUARE_BRACKET
   91               | LEFT_SQUARE_BRACKET . list_array_const SEMICOLON list_array_const RIGHT_SQUARE_BRACKET

    BOOL                 shift, and go to state 84
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    INT                  shift, and go to state 85
    FLOAT                shift, and go to state 86
    CHAR                 shift, and go to state 87
    STRING               shift, and go to state 88

    array_constant      go to state 89
    list_int_const      go to state 90
    list_float_const    go to state 91
    list_boolean_const  go to state 92
    list_char_const     go to state 93
    list_string_const   go to state 94
    list_array_const    go to state 95


State 58

   56 expr: OP_PLUSLESS . expr

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    array           go to state 65
    expr            go to state 96
    function_call   go to state 68
    const           go to state 69
    array_constant  go to state 70


State 59

   57 expr: UNARY_OPERATOR . expr

    error                shift, and go to state 54
    LEFT_BRACKET         shift, and go to state 55
    BOOL                 shift, and go to state 56
    LEFT_SQUARE_BRACKET  shift, and go to state 57
    OP_PLUSLESS          shift, and go to state 58
    UNARY_OPERATOR       shift, and go to state 59
    INT                  shift, and go to state 60
    FLOAT                shift, and go to state 61
    CHAR                 shift, and go to state 62
    IDENTIFIER           shift, and go to state 63

    array           go to state 65
    expr            go to state 97
    function_call   go to state 68
    const           go to state 69
    array_constant  go to state 70


State 60

   75 const: INT .

    $default  reduce using rule 75 (const)


State 61

   76 const: FLOAT .

    $default  reduce using rule 76 (const)


State 62

   78 const: CHAR .

    $default  reduce using rule 78 (const)


State 63

   52 array: IDENTIFIER . LEFT_SQUARE_BRACKET expr COMMA expr RIGHT_SQUARE_BRACKET
   53      | IDENTIFIER . LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   65 expr: IDENTIFIER .
   71 function_call: IDENTIFIER . LEFT_BRACKET list_expr RIGHT_BRACKET
   72              | IDENTIFIER . LEFT_BRACKET RIGHT_BRACKET
